FEAT: adicionando fundamentos de pandas e tambem condicionais no arquivo 1

--- a/fundamentos_pt_1.ipynb
+++ b/fundamentos_pt_1.ipynb
@@ -1408,6 +1408,593 @@
     "corr = np.corrcoef(np_baseball[:,0], np_baseball[:,1])\n",
     "print(\"Correlation: \" + str(corr))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparações Numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 < 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'carl' < 'chris' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comparison of booleans\n",
+    "print(True == False)\n",
+    "\n",
+    "# Comparison of integers\n",
+    "print(-5 * 15 != 75)\n",
+    "\n",
+    "# Comparison of strings\n",
+    "print('pyscript' == 'PyScript')\n",
+    "\n",
+    "# Compare a boolean with an integer\n",
+    "print(True == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 12\n",
+    "x > 5 and x < 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = 5 \n",
+    "y < 7 or y > 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NumPy\n",
+    "# logical_and()\n",
+    "#logical_or()\n",
+    "#logical_or()\n",
+    "\n",
+    "#np.logical_and(bmi > 21, bm1 < 22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define variables\n",
+    "my_kitchen = 18.0\n",
+    "your_kitchen = 14.0\n",
+    "\n",
+    "# my_kitchen bigger than 10 and smaller than 18?\n",
+    "print(my_kitchen > 10 and my_kitchen < 10)\n",
+    "\n",
+    "# my_kitchen smaller than 14 or bigger than 17?\n",
+    "print(my_kitchen < 14 or my_kitchen > 17)\n",
+    "\n",
+    "# Double my_kitchen smaller than triple your_kitchen?\n",
+    "print(my_kitchen*2 < your_kitchen*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True False  True]\n",
+      "[False False False  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create arrays\n",
+    "import numpy as np\n",
+    "my_house = np.array([18.0, 20.0, 10.75, 9.50])\n",
+    "your_house = np.array([14.0, 24.0, 14.25, 9.0])\n",
+    "\n",
+    "# my_house greater than 18.5 or smaller than 10\n",
+    "print(np.logical_or(my_house > 18.5, my_house < 10))\n",
+    "\n",
+    "# Both my_house and your_house smaller than 11\n",
+    "print(np.logical_and(my_house < 11, your_house < 11))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If, elif, else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ytalo tem que estudar\n"
+     ]
+    }
+   ],
+   "source": [
+    "#if condition:\n",
+    "#   expression\n",
+    "\n",
+    "x = 10\n",
+    "if x > 5:\n",
+    "    print('Ytalo tem que estudar')\n",
+    "else:\n",
+    "    print('Elder é o melhor irmão')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "É par\n"
+     ]
+    }
+   ],
+   "source": [
+    "z =  10\n",
+    "if z % 2 == 0:\n",
+    "    print('É par')\n",
+    "else:\n",
+    "    print('É impar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "looking around in the kitchen.\n",
+      "not big place!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define variables\n",
+    "room = \"kit\"\n",
+    "area = 14.0\n",
+    "\n",
+    "# if statement for room\n",
+    "if room == \"kit\" :\n",
+    "    print(\"looking around in the kitchen.\")\n",
+    "\n",
+    "# if statement for area\n",
+    "if area > 15.0 :\n",
+    "    print('big place!')\n",
+    "else :\n",
+    "    print('not big place!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define variables\n",
+    "room = \"bed\"\n",
+    "area = 14.0\n",
+    "\n",
+    "# if-elif-else construct for room\n",
+    "if room == \"kit\" :\n",
+    "    print(\"looking around in the kitchen.\")\n",
+    "elif room == \"bed\":\n",
+    "    print(\"looking around in the bedroom.\")\n",
+    "else :\n",
+    "    print(\"looking around elsewhere.\")\n",
+    "\n",
+    "# if-elif-else construct for area\n",
+    "if area > 15 :\n",
+    "    print(\"big place!\")\n",
+    "elif area > 10 :\n",
+    "    print(\"medium size, nice!\")\n",
+    "else :\n",
+    "    print(\"pretty small.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### While loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.5\n",
+      "3.125\n",
+      "0.78125\n"
+     ]
+    }
+   ],
+   "source": [
+    "#repete até que a condição seja atendida\n",
+    "error = 50.0\n",
+    "while error > 1:\n",
+    "    error = error / 4\n",
+    "    print(error) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correcting...\n",
+      "-5\n",
+      "correcting...\n",
+      "-4\n",
+      "correcting...\n",
+      "-3\n",
+      "correcting...\n",
+      "-2\n",
+      "correcting...\n",
+      "-1\n",
+      "correcting...\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize offset\n",
+    "offset = -6\n",
+    "\n",
+    "# Code the while loop\n",
+    "while offset != 0 :\n",
+    "    print(\"correcting...\")\n",
+    "    if offset > 0 :\n",
+    "      offset = offset - 1\n",
+    "    else : \n",
+    "      offset = offset + 1    \n",
+    "    print(offset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FOR loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fam = [1.73, 1.68, 1.71, 1.89]\n",
+    "#print(fam[0])\n",
+    "#print(fam[1])\n",
+    "#print(fam[2])...   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.73\n",
+      "1.68\n",
+      "1.71\n",
+      "1.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "for altura in fam:\n",
+    "    print(altura)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 0: 1.73\n",
+      "index 1: 1.68\n",
+      "index 2: 1.71\n",
+      "index 3: 1.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, altura in enumerate(fam):\n",
+    "    print(\"index \" + str(index) + \": \" + str(altura))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\n",
+      "A\n",
+      "M\n",
+      "I\n",
+      "L\n",
+      "Y\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in 'family':\n",
+    "    print(c.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "room 0: 11.25\n",
+      "room 1: 18.0\n",
+      "room 2: 20.0\n",
+      "room 3: 10.75\n",
+      "room 4: 9.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# areas list\n",
+    "areas = [11.25, 18.0, 20.0, 10.75, 9.50]\n",
+    "\n",
+    "# Change for loop to use enumerate() and update print()\n",
+    "for b, a in enumerate(areas) :\n",
+    "    print(\"room \" + str(b) + \": \"+ str(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the hallway is 11.25 sqm\n",
+      "the kitchen is 18.0 sqm\n",
+      "the living room is 20.0 sqm\n",
+      "the bedroom is 10.75 sqm\n",
+      "the bathroom is 9.5 sqm\n"
+     ]
+    }
+   ],
+   "source": [
+    "# house list of lists\n",
+    "house = [[\"hallway\", 11.25], \n",
+    "         [\"kitchen\", 18.0], \n",
+    "         [\"living room\", 20.0], \n",
+    "         [\"bedroom\", 10.75], \n",
+    "         [\"bathroom\", 9.50]]\n",
+    "         \n",
+    "# Build a for loop from scratch\n",
+    "for x in house:\n",
+    "    print(\"the \" + x[0] + \" is \" + str(x[1])+ \" sqm\")"
+   ]
   }
  ],
  "metadata": {
